# TimeTrackingReport

./: CMakeLists.txt  myttr.sln
myttr/: Parser.cpp  Parser.h  Timer.cpp  Timer.h  data.csv  main.cpp  myttr.vcxproj  myttr.vcxproj.filters  out.csv
